// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/visualize/Block Markdown 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <div>
      <h3
        class="lck-color-title"
      >
        Futur Markdown
      </h3>
       
      <div
        class="lck-markdown"
        title="Futur Markdown"
        type="Markdown"
      >
        <p>
          This is the content.
        </p>
        

      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots components/visualize/Block Paragraph (Text) 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <div>
      <h3
        class="lck-color-title"
      >
        Titre
      </h3>
       
      <div
        class="lck-color-content"
        title="Titre"
        type="Paragraph"
      >
        
  Je suis un texte.

      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots components/visualize/Block TableView 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <div>
      <h3
        class="lck-color-title"
      >
        My TableView's block
      </h3>
       
      <div
        id="1"
        type="TableView"
      >
        <div
          class="
      p-py-1
      p-d-flex
      p-jc-between
      p-flex-wrap
      lck-data-toolbar
    "
        >
          <div
            class="p-d-flex p-flex-wrap"
          >
            <div
              class="lck-overlay-panel"
            >
              <button
                class="p-button p-component p-button-outlined p-button-secondary"
                type="button"
              >
                <span
                  class="pi pi-filter p-button-icon p-button-icon-left"
                />
                 
                <span
                  class="p-button-label"
                >
                  no filter
                </span>
                 
                <!---->
                <span
                  class="p-ink"
                />
              </button>
               
              <!---->
            </div>
          </div>
           
          <div
            class="p-d-flex p-flex-wrap"
          >
            <!---->
             
            <!---->
          </div>
        </div>
         
        <div
          class="p-d-flex p-flex-column d-flex-1 o-auto p-jc-between"
          id="1"
          type="TableView"
        >
          <div
            class="responsive-table-wrapper p-fluid d-flex-1"
          >
            <div
              cellstate="[object Object]"
              class="
        p-datatable-sm
        p-datatable-gridlines
        p-d-flex
        p-flex-column
        justify-between
       p-datatable p-component p-datatable-resizable"
              mincolumnreorderindex="0"
              style="width: calc(6rem + 450px);"
            >
              <!---->
               
              <!---->
              <!---->
              <!---->
               
              <!---->
               
              <!---->
               
              <!---->
               
              <div
                class="p-datatable-wrapper"
              >
                <table
                  role="grid"
                >
                  <thead
                    class="p-datatable-thead"
                  >
                    <tr />
                     
                    <!---->
                  </thead>
                   
                  <tbody
                    class="p-datatable-tbody"
                  >
                    <!---->
                     
                    <tr
                      class=""
                    />
                     
                    <!---->
                     
                    <!---->
                    <!---->
                     
                    <tr
                      class=""
                    />
                     
                    <!---->
                     
                    <!---->
                  </tbody>
                   
                  <!---->
                </table>
              </div>
               
              <!---->
               
              <!---->
               
              <div
                class="p-column-resizer-helper"
                style="display: none;"
              />
               
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
           
          <div
            class="p-paginator p-component"
            limit="10"
          >
            <!---->
             
            <button
              class="p-paginator-first p-paginator-element p-link p-disabled"
              disabled="disabled"
              type="button"
            >
              <span
                class="p-paginator-icon pi pi-angle-double-left"
              />
              <span
                class="p-ink"
              />
            </button>
            <button
              class="p-paginator-prev p-paginator-element p-link p-disabled"
              disabled="disabled"
              type="button"
            >
              <span
                class="p-paginator-icon pi pi-angle-left"
              />
              <span
                class="p-ink"
              />
            </button>
            <span
              class="p-paginator-pages"
            >
              <button
                class="p-paginator-page p-paginator-element p-link p-highlight"
                type="button"
              >
                1
                <span
                  class="p-ink"
                />
              </button>
            </span>
            <button
              class="p-paginator-next p-paginator-element p-link p-disabled"
              disabled="disabled"
              type="button"
            >
              <span
                class="p-paginator-icon pi pi-angle-right"
              />
              <span
                class="p-ink"
              />
            </button>
            <button
              class="p-paginator-last p-paginator-element p-link p-disabled"
              disabled="disabled"
              type="button"
            >
              <span
                class="p-paginator-icon pi pi-angle-double-right"
              />
              <span
                class="p-ink"
              />
            </button>
            <span
              class="p-paginator-current"
            >
              Showing 1 to 2 of 2 entries
            </span>
             
            <div
              class="p-paginator-right-content"
            >
              <div
                class="paginator-nav"
              >
                <p
                  class="label"
                >
                  
        Jump to page
      
                </p>
                 
                <div
                  class="p-dropdown p-component p-inputwrapper"
                  dropdown="true"
                >
                  <div
                    class="p-hidden-accessible"
                  >
                    <input
                      aria-haspopup="listbox"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                   
                  <!---->
                   
                  <span
                    class="p-dropdown-label p-inputtext"
                  >
                    
            1
        
                  </span>
                   
                  <!---->
                   
                  <div
                    aria-haspopup="listbox"
                    class="p-dropdown-trigger"
                    role="button"
                  >
                    <span
                      class="p-dropdown-trigger-icon pi pi-chevron-down"
                    />
                  </div>
                   
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots components/visualize/Block default 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <span
      class="lck-color-content"
    >
      
    The block type does not exist.
  
    </span>
  </div>
</div>
`;

exports[`storyshots components/visualize/Block unknown type 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <div>
      <h3
        class="lck-color-title"
      >
        Not Known
      </h3>
       
      <span
        class="lck-color-content"
      >
        
      This NotKnown block type does not exist.
    
      </span>
    </div>
  </div>
</div>
`;
